; ModuleID = '/home/carl/AnghaBench/lede/package/boot/uboot-ar71xx/src/drivers/net/extr_ag71xx.c_ag71xx_halt.c'
source_filename = "/home/carl/AnghaBench/lede/package/boot/uboot-ar71xx/src/drivers/net/extr_ag71xx.c_ag71xx_halt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eth_device = type { i64 }
%struct.ag71xx = type { i32 }

@AG71XX_REG_RX_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.eth_device*)* @ag71xx_halt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ag71xx_halt(%struct.eth_device* %0) #0 {
  %2 = alloca %struct.eth_device*, align 8
  %3 = alloca %struct.ag71xx*, align 8
  store %struct.eth_device* %0, %struct.eth_device** %2, align 8
  %4 = load %struct.eth_device*, %struct.eth_device** %2, align 8
  %5 = getelementptr inbounds %struct.eth_device, %struct.eth_device* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.ag71xx*
  store %struct.ag71xx* %7, %struct.ag71xx** %3, align 8
  %8 = load %struct.ag71xx*, %struct.ag71xx** %3, align 8
  %9 = load i32, i32* @AG71XX_REG_RX_CTRL, align 4
  %10 = call i32 @ag71xx_wr(%struct.ag71xx* %8, i32 %9, i32 0)
  %11 = load %struct.ag71xx*, %struct.ag71xx** %3, align 8
  %12 = call i32 @ag71xx_dma_reset(%struct.ag71xx* %11)
  ret void
}

declare dso_local i32 @ag71xx_wr(%struct.ag71xx*, i32, i32) #1

declare dso_local i32 @ag71xx_dma_reset(%struct.ag71xx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
